--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<！DOCTYPE  html >
-< html >
-    < head >
-        < meta  charset = “ utf-8 ” >
-        < title > GitHub很有趣！</ title >
-    </ head >
-    < body >
-        < p >我使用GitHub Pages托管。</ p >
-    </ body >
-</ html >
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta  charset = "utf-8">
+        <title> GitHub is fun! </title>
+        </head>
+        <body>
+            <p>I am hosted with GitHub Pages.</p>
+        <body>
+<html>
